# pharma-job-alert

./: .gitignore  Cargo.toml  config.toml
.github/workflows/: daily_alert.yml
public/: index.html  jobs.json
src/: config.rs  dedup.rs  email.rs  main.rs  models.rs  output.rs
src/scrapers/: bayer.rs  biospace.rs  csl_vifor.rs  indeed.rs  jobs_ch.rs  linkedin.rs  mod.rs  pharmiweb.rs  smartrecruiters.rs  workday.rs
